--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^5.4.7",
     "vite-plugin-pwa": "^0.20.5"
   },
   "dependencies": {
-    "tevm": "1.0.0-next.116",
-    "viem": "^2.21.11",
+    "@tevm/common": "1.0.0-next.117",
+    "tevm": "1.0.0-next.117",
+    "viem": "^2.21.12",
     "zustand": "5.0.0-rc.2"
   }
 }
